cabal-version:      3.0
name:               data-star
version:            0.1.0.0
synopsis:           Snap Server for DataStar
description:
  Simulate the server.js example of datastar in haskell
license:            NONE
author:             Henry Laxen
maintainer:         nadine.and.henry@pobox.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable datastar
  main-is:          Main.hs
  build-depends:
      aeson
    , base
    , bytestring
    , bytestring-builder
    , io-streams
    , neat-interpolation
    , random
    , snap
    , snap-core
    , time
    , utf8-conversions

      
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall
    -O2
    -Wall
    -funbox-strict-fields
    -fwarn-tabs
    -threaded
    -ddump-minimal-imports
  default-extensions:
    BangPatterns
    QuasiQuotes
    TemplateHaskellQuotes
    OverloadedStrings
    FlexibleContexts
    DeriveGeneric


 -- GHC Version 9.6.4
 -- cabal-install version 3.10.3.0
 
