[project]
name = "datastar-py"
description = "Helper functions and classes for the Datastar library (https://data-star.dev/)"
readme = "README.md"
authors = [
    { name = "Felix Ingram", email = "f.ingram@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []
dynamic=["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django>=4.2.16",
    "fastapi[standard]>=0.115.4",
    "flask[async]>=3.0.3",
    "quart>=0.19.9",
    "sanic>=24.6.0",
    "uvicorn>=0.32.1",
]

[tool.hatch.version]
path = "src/datastar_py/__about__.py"

[[tool.bumpversion.files]]
filename = "src/datastar_py/__about__.py"

[tool.bumpversion]
current_version = "0.4.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
